--- a/build-files/scss/style.scss
+++ b/build-files/scss/style.scss
@@ -21,5 +21,8 @@
 @import "slider";
 @import "forms";
 @import "banners-footer";
-@import "image-top";
+@import "box-on-top";
 @import "insurance";
+@import "contact";
+@import "columns";
+@import "search";
