--- a/build-files/scss/_insurance.scss
+++ b/build-files/scss/_insurance.scss
@@ -18,7 +18,7 @@
 			background: white;
 			padding: 30px;
 			display: inline-block;
-			box-shadow: 0 0 40px 0 rgba(0,0,0,0.1);
+			@include boxshadow;
 			text-align: left;
 			width: 80%;
 			@include border-box;
