--- a/build-files/scss/_mixins.scss
+++ b/build-files/scss/_mixins.scss
@@ -38,3 +38,7 @@
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
 }
+
+@mixin boxshadow {
+	box-shadow: 0 0 40px 0 rgba(0,0,0,0.1);
+}
