--- a/wordpress/wp-content/themes/milan/style.css
+++ b/wordpress/wp-content/themes/milan/style.css
@@ -62,6 +62,9 @@ a, a:hover, a:active, a:focus {
 .cf:after {
   clear: both; }
 
+.page-template-page-blog {
+  background: #fcfcfd; }
+
 @media all and (min-width: 768px) {
   .container {
     margin-left: auto;
@@ -2453,3 +2456,170 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 @media all and (min-width: 1200px) {
   .step:before {
     left: 46%; } }
+
+.table-boxes span {
+  background: #eceff2;
+  display: block; }
+
+.table-boxes span:nth-child(2) {
+  background: #f9fafb; }
+
+.contact-info {
+  text-align: center;
+  padding: 40px 15px; }
+
+.contact-info img {
+  width: 100%;
+  height: auto;
+  max-width: 45px;
+  margin-bottom: 28px; }
+
+.contact-info h4 {
+  font-weight: 500;
+  font-size: 26px;
+  font-family: "Roboto", sans-serif; }
+
+.contact-info p {
+  font-weight: 300;
+  color: #4a4f55;
+  font-size: 18px; }
+
+.contact-info a:hover {
+  text-decoration: underline; }
+
+@media all and (min-width: 768px) {
+  .table-boxes {
+    display: table;
+    width: 100%; }
+  .table-boxes span {
+    display: table-cell;
+    width: 50%;
+    vertical-align: top;
+    text-align: right; }
+  .table-boxes span:nth-child(2) {
+    text-align: left; } }
+
+@media all and (min-width: 992px) {
+  .table-boxes span .contact-info {
+    display: inline-block;
+    width: 400px;
+    padding: 40px 45px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box; }
+  .table-boxes span:nth-child(2) {
+    text-align: left; } }
+
+@media all and (min-width: 1200px) {
+  .table-boxes span .contact-info {
+    width: 560px; }
+  .table-boxes span .contact-info p {
+    max-width: 310px;
+    margin-left: auto;
+    margin-right: auto; } }
+
+.two-columns {
+  font-size: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0; }
+
+.two-columns li {
+  font-size: 16px;
+  line-height: 100%; }
+
+.box-post {
+  background: white;
+  padding: 30px;
+  margin-bottom: 50px;
+  -webkit-box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.1); }
+
+.box-post small {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #5281ac;
+  display: block;
+  margin-bottom: 20px; }
+
+.box-post h2 a {
+  font-size: 28px;
+  font-weight: bold;
+  color: #062d5d;
+  margin: 0; }
+
+.box-post h2 a:hover {
+  color: black; }
+
+.box-post hr {
+  border: 0;
+  margin: 20px 0;
+  height: 4px;
+  background: #5281ac;
+  display: block;
+  width: 50px; }
+
+.box-post p, .box-post a {
+  font-size: 17px;
+  font-weight: 300; }
+
+.box-post a.link {
+  text-decoration: underline; }
+
+.box-post a.link:hover {
+  color: black; }
+
+@media all and (min-width: 768px) {
+  .box-post {
+    padding: 60px; }
+  .box-post small {
+    margin-bottom: 30px; }
+  .box-post h2 a {
+    font-size: 38px;
+    line-height: 1.2em; }
+  .box-post hr {
+    margin: 36px 0; }
+  .box-post p, .box-post a {
+    font-size: 21px; } }
+
+@media all and (min-width: 992px) {
+  .two-columns li {
+    display: inline-block;
+    width: 50%;
+    padding: 0 22px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box; } }
+
+.form-search {
+  margin-bottom: 70px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  position: relative;
+  border: 1px solid #f3f3f3; }
+
+.form-search input {
+  font-size: 21px;
+  font-weight: 300;
+  border: 0;
+  background: white;
+  width: 100%;
+  height: 60px;
+  padding: 10px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  outline: none; }
+
+.form-search button {
+  position: absolute;
+  right: 9px;
+  top: 16px;
+  border: 0;
+  background: transparent;
+  color: #8b95a7;
+  font-size: 22px;
+  cursor: pointer;
+  -webkit-transition: all 250ms ease-in-out;
+  -o-transition: all 250ms ease-in-out;
+  transition: all 250ms ease-in-out; }
+
+.form-search button:hover {
+  color: black; }
