--- a/build-files/scss/_buttons.scss
+++ b/build-files/scss/_buttons.scss
@@ -25,6 +25,15 @@
     @include center;
 }
 
+.button-solid {
+	@extend .button;
+	background: $brand-primary;
+	color: white;
+	&:hover {
+		background: darken($brand-primary,10%);
+	}
+}
+
 // 768px
 @media all and (min-width: $screen-portrait) {
 
