--- a/build-files/scss/_contact.scss
+++ b/build-files/scss/_contact.scss
@@ -22,7 +22,7 @@
 		font-size: 26px;
 		font-family: $primary-font;
 	}
-	p {
+	p, p a {
 		font-weight: 300;
 		color: #4a4f55;
 		font-size: 18px;
