--- a/wordpress/wp-content/themes/milan/style.css
+++ b/wordpress/wp-content/themes/milan/style.css
@@ -2523,7 +2523,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   font-size: 26px;
   font-family: "Roboto", sans-serif; }
 
-.contact-info p {
+.contact-info p, .contact-info p a {
   font-weight: 300;
   color: #4a4f55;
   font-size: 18px; }
