--- a/build-files/scss/_contact.scss
+++ b/build-files/scss/_contact.scss
@@ -59,6 +59,7 @@
 		box-shadow: none;
 		outline: none;
 		margin: 0;
+		-webkit-appearance: none;
 	}
 	.message {
 		background: transparent!important;	
