-webkit-appearance: none; on input

--- a/build-files/scss/_contact.scss
+++ b/build-files/scss/_contact.scss
@@ -45,6 +45,7 @@
 		@include boxshadow;
 		margin-bottom: 40px;
 		border-radius: 4px;
+		-webkit-appearance: none;
 	}
 	textarea {
 		height: 275px;
