--- a/wordpress/wp-content/themes/milan/style.css
+++ b/wordpress/wp-content/themes/milan/style.css
@@ -773,10 +773,13 @@ blockquote, blockquote p {
   font-size: 1.25em;
   line-height: 1.25; }
 
+.single ul, .single ol {
+  font-weight: 300; }
+
 ul, ol {
   list-style-position: outside;
   padding-left: 35px;
-  color: #AAA;
+  color: #525a74;
   font-size: 18px;
   line-height: 1.4em;
   margin-bottom: 40px; }
@@ -862,7 +865,9 @@ ol ol, ul ol {
     line-height: 1; }
   blockquote, blockquote p {
     font-size: 1.5em;
-    line-height: 1.45833333; } }
+    line-height: 1.45833333; }
+  .single ul, .single ol {
+    font-size: 21px; } }
 
 @media all and (min-width: 992px) {
   h1 {
@@ -2807,6 +2812,9 @@ body.single .main .container .box-post {
   padding: 0;
   -webkit-box-shadow: none;
   box-shadow: none; }
+
+.single h1, .single h2 {
+  margin-bottom: 15px; }
 
 .box-author {
   margin-bottom: 35px; }
