--- a/build-files/scss/_layout.scss
+++ b/build-files/scss/_layout.scss
@@ -44,10 +44,10 @@ a, a:hover, a:active, a:focus {
 	}
 }
 .margin-bottom-30 {
-	margin-bottom: 30px;
+	margin-bottom: 30px!important;
 }
 .margin-bottom-60 {
-	margin-bottom: 60px;
+	margin-bottom: 60px!important;
 }
 // 768px
 @media all and (min-width: $screen-portrait) {
