--- a/wordpress/wp-content/themes/milan/style.css
+++ b/wordpress/wp-content/themes/milan/style.css
@@ -81,10 +81,10 @@ a, a:hover, a:active, a:focus {
   margin-top: 120px; }
 
 .margin-bottom-30 {
-  margin-bottom: 30px; }
+  margin-bottom: 30px !important; }
 
 .margin-bottom-60 {
-  margin-bottom: 60px; }
+  margin-bottom: 60px !important; }
 
 @media all and (min-width: 768px) {
   .container {
@@ -1901,6 +1901,9 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 
 .gray {
   background: #f8f9fa; }
+
+.gray h3 {
+  font-size: 36px; }
 
 @media all and (min-width: 768px) {
   .box {
