color link on contact us page

--- a/build-files/scss/_columns.scss
+++ b/build-files/scss/_columns.scss
@@ -49,7 +49,7 @@
 	}
 	a.link { 
 		text-decoration: underline;
-		color: $brand-primary;
+		color: $brand-primary!important;
 		&:hover {
 			color: black;
 		}
