--- a/wordpress/wp-content/themes/milan/style.css
+++ b/wordpress/wp-content/themes/milan/style.css
@@ -2685,7 +2685,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 
 .box-post a.link {
   text-decoration: underline;
-  color: #5281ac; }
+  color: #5281ac !important; }
 
 .box-post a.link:hover {
   color: black; }
