--- a/wordpress/wp-content/themes/milan/style.css
+++ b/wordpress/wp-content/themes/milan/style.css
@@ -2684,11 +2684,13 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   font-weight: 300; }
 
 .box-post a.link {
-  text-decoration: underline;
-  color: #5281ac !important; }
+  text-decoration: underline; }
 
 .box-post a.link:hover {
   color: black; }
+
+a.link {
+  color: #5281ac; }
 
 .four-columns, .three-columns {
   padding: 0;
