--- a/build-files/scss/_insurance.scss
+++ b/build-files/scss/_insurance.scss
@@ -36,11 +36,15 @@
 					margin-bottom: 10px;
 					font-size: 14px;
 					list-style: none;
+					padding-left: 30px;
+					position: relative;
 					&:before {
 						content: "•";
+						left: 0;
 						margin-right: 20px;
 						display: inline-block;
 						vertical-align: middle;
+						position: absolute;
 					}
 				}
 			}
