--- a/build-files/scss/_typography.scss
+++ b/build-files/scss/_typography.scss
@@ -125,6 +125,9 @@ ol ol, ul ol {
 
 .lighter {
 	font-weight: 300;
+	padding-left: 15px;
+	padding-right: 15px;
+	@include border-box;
 }
 // 768px
 @media all and (min-width: $screen-portrait) {
