--- a/build-files/scss/_forms.scss
+++ b/build-files/scss/_forms.scss
@@ -81,10 +81,12 @@
 // 600px
 @media all and (min-width: 600px) {
 	.newsletter-form {
+		background: white;
 		display: table;
 		width: 100%;
 		max-width: 424px;
 		@include center;
+		border-radius: 5px;
 		box-shadow: 0 0 40px 0 rgba(0,0,0,0.1);
 	}
 	.newsletter-form--input,
