--- a/build-files/scss/_hero-banner.scss
+++ b/build-files/scss/_hero-banner.scss
@@ -88,14 +88,14 @@
 // 992px
 @media all and (min-width: $screen-landscape) {
 	.hero-banner {
-		height: 100vh;
+		height: calc(100vh - 155px);
 		padding: 0;
 	}
 
 	.center-hero {
 		display: table;
 		width: 100%;
-		height: 100vh;
+		height: calc(100vh - 155px);
 	}
 	.center-hero--info {
 		display: table-cell;
