--- a/wordpress/wp-content/themes/milan/style.css
+++ b/wordpress/wp-content/themes/milan/style.css
@@ -2296,7 +2296,10 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   .newsletter-form--button {
     -webkit-border-radius: 0 5px 5px 0;
     border-radius: 0 5px 5px 0;
-    width: 30%; } }
+    width: 30%; }
+  .mc4wp-form-fields {
+    display: table;
+    width: 100%; } }
 
 .banners-footer article {
   background: #eceff2;
