--- a/wordpress/wp-content/themes/milan/style.css
+++ b/wordpress/wp-content/themes/milan/style.css
@@ -2274,14 +2274,11 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 @media all and (min-width: 600px) {
   .newsletter-form,
   .mc4wp-form {
-    background: white;
     display: table;
     width: 100%;
     max-width: 424px;
     margin-left: auto;
     margin-right: auto;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
     -webkit-box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.1); }
   .newsletter-form--input,
@@ -2299,7 +2296,10 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
     width: 30%; }
   .mc4wp-form-fields {
     display: table;
-    width: 100%; } }
+    width: 100%;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    background: white; } }
 
 .banners-footer article {
   background: #eceff2;
@@ -2648,6 +2648,8 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
     bottom: 0;
     left: 0;
     background: red; }
+  .mc4wp-response p {
+    margin-bottom: 0; }
   .table-boxes {
     display: table;
     width: 100%; }
