--- a/build-files/scss/_contact.scss
+++ b/build-files/scss/_contact.scss
@@ -99,12 +99,11 @@
 		position: relative;
 	}
 	.mc4wp-response {
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		background: red;
+		padding: 15px;
 		p {
 			margin-bottom: 0;
+			font-size: 14px;
+			font-style: italic;
 		}
 	}
 	.table-boxes {
